# pwsh-prompt

./: Cargo.toml
pwsh-prompt-date/: Cargo.toml
pwsh-prompt-date/src/: main.rs
pwsh-prompt-full/: Cargo.toml
pwsh-prompt-full/src/: main.rs
pwsh-prompt-git-plugin/: Cargo.toml
pwsh-prompt-git-plugin/src/: main.rs
pwsh-prompt-path/: Cargo.toml
pwsh-prompt-path/src/: main.rs
