[package]
name = "pwsh-prompt-full"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
git2 = "0.13"
rand = "0.8"
chrono = "0.4"
colored = "2.0"
dirs = "3.0"
